k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: django-deployment
namespace: django-app
spec:
replicas: 2
selector:
matchLabels:
app: django
template:
metadata:
labels:
